psp-migration-mpol/add-apparmor/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-apparmor
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-apparmor.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
  - name: step-03
    try:
    - apply:
        file: ../.kyverno-test/resource.yaml
    - assert:
        file: resource-mutated.yaml
